--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "mongoose": "^9.1.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
